# PDFFilter

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.4ADDF5A6AF00F71F.idx  pdf_utils.cpp.D94296B1AC0F2EF1.idx  pdf_utils.hpp.93D22631BB17B4C9.idx
include/: pdf_utils.hpp
src/cpp/: main.cpp  pdf_utils.cpp
src/python/: paper_classifier.py
